docs/ui-kit/angular/2.0/overview.mdx
---
title: "Overview"
---

The CometChat Angular UI Kit is developed to keep developers in mind and aims to reduce development efforts significantly.

<Frame>
  <img src="/images/80f881ed-1623200223-cfa2c1390d0c57b71a4982bc3df870a1.png" />
</Frame>

The UI Kit’s customizable UI components simplify the process of integrating text chat and voice/video calling features to your website or mobile application in a few minutes.

<CardGroup>
<Card title="I want to checkout Angular UI Kit">

Follow the steps mentioned in the `README.md` file.

Kindly, click on below button to download our Angular UI Kit.

[Angular UI Kit](https://github.com/cometchat-pro/cometchat-pro-angular-ui-kit/archive/v2.zip)

[View on Github](https://github.com/cometchat-pro/cometchat-pro-angular-ui-kit/tree/v2)

</Card>

<Card title="I want to explore the sample app">

Kindly, click on below button to download our Angular Sample App.

[Angular Sample App](https://github.com/cometchat-pro/javascript-angular-chat-app/archive/v2.zip)

[View on Github](https://github.com/cometchat-pro/javascript-angular-chat-app/tree/v2)

</Card>
</CardGroup>

## Prerequisites

1. A text editor. (e.g. Visual Studio Code, Notepad++, Sublime Text, Atom, or VIM)
2. [Node](https://nodejs.org/en/)
3. [npm](https://www.npmjs.com/get-npm)
4. [Angular CLI](https://angular.io/cli)

<Tabs>
<Tab title="CLI">
```sh
npm install -g @angular/cli
```

</Tab>

</Tabs>

## Installing Angular UI Kit

### Setup

1. Register on CometChat\
   a. To install the Angular UI Kit, you need to first register on the CometChat Dashboard. Click [here](https://app.cometchat.com/) to sign up

2. Get Your Application Keys 🔑

   * Create a new app
   * Head over to the QuickStart or API & Auth Keys section and note the App ID, Auth Key, and Region.

3. Add the CometChat Dependency

<Tabs>
<Tab title="CLI">
```sh
npm install @cometchat-pro/chat@2.4.0 --save
```

</Tab>

</Tabs>

### Configure CometChat inside your app

* Import CometChat SDK

<Tabs>
<Tab title="JavaScript">
```js
import { CometChat } from "@cometchat-pro/chat";
```

</Tab>

</Tabs>

* Initialize CometChat 🌟 The `init()` method initializes the settings required for CometChat. We suggest calling the `init()` method on app startup, i.e main.ts file of the application.

<Tabs>
<Tab title="JavaScript">
```js
const appID = "APP_ID";
const region = "REGION";
const appSetting = new CometChat.AppSettingsBuilder()
  .subscribePresenceForAllUsers()
  .setRegion(region)
  .build();
CometChat.init(appID, appSetting).then(
  () => {
    console.log("Initialization completed successfully");
    // You can now call login function.
  },
  (error) => {
    console.log("Initialization failed with error:", error);
    // Check the reason for error and take appropriate action.
  }
);
```

</Tab>

</Tabs>

<Note>

Replace APP\_ID and REGION with your CometChat App ID and Region in the above code

</Note>

* Create user This method takes a `User` object and the `Auth Key` as input parameters and returns the created `User` object if the request is successful.

<Tabs>
<Tab title="JavaScript">
```js
let authKey = "AUTH_KEY";
var uid = "user1";
var name = "Kevin";

var user = new CometChat.User(uid);
user.setName(name);
CometChat.createUser(user, authKey).then(
    user => {
        console.log("user created", user);
    },error => {
        console.log("error", error);
    }
)
```

</Tab>

</Tabs>

* Login your user 👤

This method takes UID and Auth Key as input parameters and returns the User object containing all the information of the logged-in user

<Tabs>
<Tab title="JavaScript">
```js
const authKey = "AUTH_KEY";
const uid = "cometchat-uid-1";

CometChat.login(uid, authKey).then(
  (user) => {
    console.log("Login Successful:", { user });
  },
  (error) => {
    console.log("Login failed with exception:", { error });
  }
);
```

</Tab>

</Tabs>

<Note>

Replace AUTH\_KEY with your CometChat Auth Key in the above code.

</Note>

<Note>

We have set up 5 users for testing having UIDs: cometchat-uid-1, cometchat-uid-2, cometchat-uid-3, cometchat-uid-4, and cometchat-uid-5.

We have used uid cometchat-uid-1 as an example here. You can create a User from CometChat Dashboard as well.

</Note>

### Add UI Kit to your project

* Clone this repository

<Tabs>
<Tab title="CLI">
```sh
git clone https://github.com/cometchat-team/cometchat-pro-angular-ui-kit.git -b v2
```

</Tab>

</Tabs>

* Copy the cloned repository into your project src folder.

<Frame>
  <img src="/images/44032002-1623200229-c4157e1a5db073628e7a3a15b84a5368.png" />
</Frame>

* Import the Components in the respective module where the component will be used.
* Install @ctrl/ngx-emoji-mart according to the angular version of your project @ctrl/ngx-emoji-mart
* Add these styles to your angular.json
* Wrap all the selectors in a div with class=responsive as shown in the next step

<Tabs>
<Tab title="JavaScript">
```js
"styles": [
  "node_modules/@ctrl/ngx-emoji-mart/picker.css",
  "src/cometchat-pro-angular-ui-kit/CometChatWorkspace/projects/ui-kit/angular/src/css/styles.scss"
]
```

</Tab>

</Tabs>

### Launch CometChat

CometChatUI is an option to launch a fully functional chat application using the UI Kit. In UI Kit all the UI Components are interlinked and work together to launch a fully functional chat on your website/application.

<Frame>
  <img src="/images/bb68b7ee-1623200230-fcc7e751c1f740c4a693bfdb14354be8.gif" />
</Frame>

### Usage

<Tabs>
<Tab title="Angular">
```js
import { CometChatUI } from "../components/CometChatUI/CometChat/cometchat-ui.module";

#Use this selector in your html file

<div class="responsive">
  <CometChatUI></CometChatUI>
</div>
```

</Tab>

</Tabs>

## Checkout our sample app

Visit our [Angular sample app](https://github.com/cometchat-pro/javascript-angular-chat-app/tree/v2) repo to run the Angular sample app.
